1.20.1/CHANGELOG.md
# Changelog
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog].

## [v8.0.6-1.20.1] - 2024-04-07
### Changed
- Allow `override_client_permissions_check` config option to also force enabling of the Vanilla Tweaks triggers command handler

## [v8.0.5-1.20.1] - 2023-12-03
### Changed
- Client side permissions check can now be disabled in the config
### Fixed
- Armor stand menu can no longer open in adventure mode 

## [v8.0.4-1.20.1] - 2023-12-03
### Changed
- Updated to Puzzles Api v8.1.4

## [v8.0.3-1.20.1] - 2023-08-16
### Fixed
- Fixed a crash trying to interact with an armor stand when playing on a Forge server that does not have Armor Statues installed (Forge only)

## [v8.0.2-1.20.1] - 2023-07-29
### Fixed
- Fixed an issue with always receiving an incorrect error message when trying to edit an armor stand on a server with the Vanilla Tweaks data pack installed

## [v8.0.1-1.20.1] - 2023-07-28
### Added
- Added a new tab that only shows when Armor Statues is being used in conjunction with the Vanilla Tweaks data pack offering Vanilla Tweaks exclusive toggles
### Changed
- Optimized some actions during editing to be performed much quicker when Armor Statues is being used in conjunction with the Vanilla Tweaks data pack

## [v8.0.0-1.20.1] - 2023-07-27
- Ported to Minecraft 1.20.1

[Keep a Changelog]: https://keepachangelog.com/en/1.0.0/
